# betterhist

./: LICENSE  README.md  pyproject.toml
betterhist/: cli.py  listsrv.py  subshell.py  termsplit.py  views.py
