[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "betterhist"
version = "0.1.0"
description = "Better Shell History"
authors = [{ name = "Oqoqqo Halp", email = "oqoqqo@protonmail.com" }]
dependencies = [
  "pyte",
  "typer",
]

[project.scripts]
bh = "betterhist.cli:main"  # CLI entry point

